sfdx-source/force-app/main/default/objects/SBQQ__QuoteLineGroup__c/fields/CCP_Unique_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>CCP_Unique_Group_Id__c</fullName>
    <description>LEM-10489- Refers to the first Quote Line group created.</description>
    <label>CCP Unique Group Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>