sfdx-source/force-app/main/default/objects/SBQQ__QuoteLineGroup__c/fields/Original_Quote_Line_Group__c.field-meta.xml
<CustomField>
    <fullName>Original_Quote_Line_Group__c</fullName>
    <description>LEM-6466: Refers to the group from which it is cloned.</description>
    <label>Original Quote Line Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>